getting-started/1.1/the-tangle/genesis.md
# The origin of the IOTA token

**This topic discusses the origins of the IOTA token and how nodes keep track of them.**

The IOTA token was launched on the Mainnet in June 2017. At this point, nodes in the network were hard-coded with a **total supply** of **2,779,530,283 277,761**.

This large supply allows each of the billions of devices, which are expected to be a part of the Internet, to have its own wallet and transact with other devices.

## How the IOTA token was created

All IOTA tokens were created in the very first transaction in the Tangle, called the **genesis transaction**. This transaction gave the total supply of IOTA tokens to one address.

From the genesis, IOTA tokens were then transferred to the accounts of the original investors in the project. After some time, a peer-to-peer trading network was established.

Today, IOTA tokens are spread across many different addresses. You can see [how IOTA tokens are distributed](https://thetangle.org/statistics/tokens-distribution) on a Tangle explorer.

## How nodes keep track of IOTA tokens

All nodes keep a record of the balances of each address.

This record looks something like the following:

```
WKJDF9LVQCVKEIVHFAOMHISHXJSGXWBJFYEQPOQKSVGZZFLTUUPBACNQZTAKXR9TFVKBGYSNSPHRNKKHA;1
```

Each address and its balance is separated by a semicolon.

After nodes are sure that a value transaction is confirmed, nodes update this record for any addresses that are involved in the transaction.

## Value of the IOTA token

The following attributes give the IOTA token its value:

- **It's finite:** The maximum number of IOTA tokens is built into the network and can't ever be changed
- **It's useful:** To transfer value in an IOTA network, you must use the IOTA token

The value of the IOTA token is determined by supply and demand on any of the [available markets](https://www.iota.org/get-started/buy-iota).

## Next steps

See [what happens in the Tangle to transfer IOTA tokens](../the-tangle/how-transfer-tokens.md) from one address to another.

